Specs reconciliation, addressed inconsistencies, code fix and polish POST Sprint-001